@@ -1,3 +1,7 @@
+2010-09-29
+    * Set an application icon in Linux
+    * Display the tooltips over the knobs and sliders instead of the mouse pos.
+
 2010-09-28
     * Translation updates
 
